♻️ refactor: 알림 Entity, Response 변경
- 알림 테이블의 title, content, url 삭제
- 각 알림의 type과 value로 frontend쪽에서 조립하게 선언
- 알림의 구현 방식 변경
- product의 swagger 설명 수정

Ref. #S14P11A704-212