@@ -1,9 +1,7 @@
 package com.mento.domain.notification.service.query;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.BDDMockito.given;
-import static org.mockito.BDDMockito.times;
-import static org.mockito.BDDMockito.verify;
+import static org.assertj.core.api.Assertions.*;
+import static org.mockito.BDDMockito.*;
 
 import java.util.List;
 
@@ -13,10 +11,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Slice;
-import org.springframework.data.domain.SliceImpl;
 
 import com.mento.domain.notification.dto.response.NotificationResDto;
 import com.mento.domain.notification.entity.Notification;
@@ -37,28 +31,26 @@ class NotificationQueryServiceImplTest {
 	void 사용자의_알림_목록을_성공적으로_조회한다() {
 		// given
 		Long userId = 1L;
-		Pageable pageable = PageRequest.of(0, 10);
 
 		Notification notification = Notification.builder()
 			.id(1L)
 			.userId(userId)
 			.type(NotificationType.RESERVATION_REMINDER)
-			.title("Title")
-			.content("Content")
-			.url("/url")
+			.value("60")
 			.build();
 
-		Slice<Notification> notificationSlice = new SliceImpl<>(List.of(notification));
+		List<Notification> notificationList = List.of(notification);
 
-		given(notificationRepository.findAllByUserId(userId, pageable)).willReturn(notificationSlice);
+		given(notificationRepository.findAllByUserId(userId)).willReturn(notificationList);
 
 		// when
-		Slice<NotificationResDto> result = notificationQueryService.getNotifications(userId, pageable);
+		List<NotificationResDto> result = notificationQueryService.getNotifications(userId);
 
 		// then
-		assertThat(result).isNotNull();
-		assertThat(result.getContent()).hasSize(1);
-		assertThat(result.getContent().get(0).title()).isEqualTo("Title");
-		verify(notificationRepository, times(1)).findAllByUserId(userId, pageable);
+		assertThat(result).isNotNull()
+			.hasSize(1);
+		assertThat(result.getFirst().value()).isEqualTo("60");
+		
+		verify(notificationRepository, times(1)).findAllByUserId(userId);
 	}
 }
